feat: enhance Slack notifications with improved error handling, reviewer formatting, and add reviewer validation to the PR form.

--- a/.pr_creator_config.json
+++ b/.pr_creator_config.json
@@ -1,7 +1,8 @@
 {
     "personalized_reviewers": [
         "Jian-Cudiamat",
-        "Shunsena-Jian"
+        "Shunsena-Jian",
+        "chester-qt"
     ],
     "slack_webhook_url": "",
     "slack_user_map": {
